🔨 Pretty error handling + logger revised
