# http/response/login_response.go
@@ -1,6 +1,0 @@
-package response
-
-type LoginResponse struct {
-	Token  string `json:"token"`
-	Expiry int64  `json:"expiry"`
-}
